<resources>
    <string name="app_name">E-Tab</string>
    <string name="search">Search…</string>
    <string name="back">Back</string>
    <string name="cancel">Cancel</string>
    <string name="ok">OK</string>
    <string name="notes">Notes</string>
    <string name="books">Books</string>
    <string name="dictionary">Dictionary</string>
    <string name="focus">Focus</string>
    <string name="highlighter">Highlighter</string>
    <string name="pen">Pen</string>
    <string name="color">Color</string>
    <string name="type">Type</string>
    <string name="size">Size</string>
    <string name="eraser_size">Eraser Size</string>
    <string name="grid_type">Grid Type</string>
    <string name="none">None</string>
    <string name="dot">Dot</string>
    <string name="square">Square</string>
    <string name="ruled">Ruled</string>
    <string name="folders">Folders</string>
    <string name="favorites">Favorites</string>
    <string name="all_books">All Books</string>
    <string name="save_as_pdf">Save as PDF</string>
    <string name="save">Save</string>
</resources>