<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp"
    android:background="@drawable/bg_rounded_controls"
    android:elevation="8dp">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/grid_type"
        android:textColor="?attr/titleTextColor"
        android:textStyle="bold"
        android:layout_marginBottom="8dp"/>

    <RadioGroup
        android:id="@+id/group_grid_type"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        
        <RadioButton
            android:id="@+id/radio_none"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/titleTextColor"
            android:text="@string/none"/>
            
        <RadioButton
            android:id="@+id/radio_dot"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/titleTextColor"
            android:text="@string/dot"/>
            
        <RadioButton
            android:id="@+id/radio_square"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/titleTextColor"
            android:text="@string/square"/>
            
        <RadioButton
            android:id="@+id/radio_ruled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?attr/titleTextColor"
            android:text="@string/ruled"/>
    </RadioGroup>
</LinearLayout>